# clawbox

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.cluster.yml  docker-compose.yml  mvp-plan.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
AgentBoxSkill/: SKILL.md
AgentBoxSkill/references/: api.md  self-hosting.md  troubleshooting.md
AgentBoxSkill/scripts/: setup.sh
ClawBoxSkill/references/: troubleshooting.md
agent-integration/: SKILL.md
alembic/: env.py
alembic/versions/: 20260321_0001_bootstrap_schema.py  20260328_0002_add_users_and_oauth.py  20260329_0003_add_folder_to_files.py  20260329_0004_add_shared_links.py  20260329_0005_add_auto_organize_setting.py  20260329_0005_add_drops_table.py  20260330_0005_gemini_multimodal_embeddings.py  20260407_0006_merge_drops_and_gemini.py  20260409_0007_caption_multimodal_embeddings.py  20260412_0008_embedding_job_queue.py
docs/: design-agent-memory.md  design-async-upload.md  design-auto-organize.md  design-mount.md  design-quick-drop.md  design-self-hosting.md  google-oauth-test-plan.md  self-hosting.md
memory-system/: test-memory.sh
memory-system/AgentMemorySkill/: SKILL.md
memory-system/AgentMemorySkill/references/: claude-md-snippet.md  memory-format.md
memory-system/AgentMemorySkill/scripts/: setup-memory.sh
mvp/: README.md  __init__.py  auth.py  cli.py  config.py  database.py  embeddings.py  main.py  models.py  oauth.py  storage.py  transfers.py
mvp/routes/: drops.py  files.py  oauth.py  search.py  tokens.py
mvp/static/: drop.html  index.html
skills/clawbox/: SKILL.md
skills/clawbox/references/: api.md  troubleshooting.md
src/: README.md  __init__.py  auth.py  cli.py  config.py  database.py  embedding_jobs.py  embeddings.py  main.py  models.py  oauth.py  storage.py  worker.py
src/routes/: drops.py  files.py  oauth.py  search.py  tokens.py
src/static/: drop.html
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_embedding_queue.py
(+1 files in other folders)
