[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawbox"
version = "0.0.1"
description = "A minimal cloud file system for agents with semantic search capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ClawBox Team"}
]
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "python-multipart>=0.0.6",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "aiofiles>=23.2.1",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "boto3>=1.34.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "google-genai>=1.0.0",
]

[project.scripts]
clawbox = "mvp.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mvp*"]
